// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitmojiList when is list mode should render the component 1`] = `
<div
  className="row"
  id="gitmoji-list"
>
  <div
    className="col-xs-12"
  >
    <div
      className="container"
    >
      <div
        className="inputWrapper"
      >
        <input
          className="searchInput"
          name="searchInput"
          onChange={[Function]}
          placeholder="Search your gitmoji..."
          type="search"
          value=""
        />
        <kbd
          className="kbd"
        >
          Ctrl
           K
        </kbd>
      </div>
      <div
        className="actionsContainer"
      >
        <button
          className="button"
          onClick={[Function]}
        >
          <svg
            className="icon icon-light"
            height="1em"
            width="1em"
          >
            <use
              xlinkHref="#icon-light"
            />
          </svg>
        </button>
        <div
          className="container"
        >
          <button
            className="button buttonActive"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              className="icon icon-grid"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#icon-grid"
              />
            </svg>
          </button>
          <button
            className="button "
            disabled={false}
            onClick={[Function]}
          >
            <svg
              className="icon icon-list"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#icon-list"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff7281",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🎨"
          type="button"
        >
          🎨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":art:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :art:
            </code>
          </button>
        </div>
        <p>
          Improve structure / format of the code.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#40c4ff",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="⚡️"
          type="button"
        >
          ⚡️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":zap:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :zap:
            </code>
          </button>
        </div>
        <p>
          Improve performance.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff9d44",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🔥"
          type="button"
        >
          🔥
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":fire:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :fire:
            </code>
          </button>
        </div>
        <p>
          Remove code or files.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#8cd842",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🐛"
          type="button"
        >
          🐛
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":bug:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :bug:
            </code>
          </button>
        </div>
        <p>
          Fix a bug.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#fb584a",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🚑️"
          type="button"
        >
          🚑️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":ambulance:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :ambulance:
            </code>
          </button>
        </div>
        <p>
          Critical hotfix.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ffe55f",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="✨"
          type="button"
        >
          ✨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":sparkles:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :sparkles:
            </code>
          </button>
        </div>
        <p>
          Introduce new features.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`GitmojiList when is not list mode should render the component 1`] = `
<div
  className="row"
  id="gitmoji-list"
>
  <div
    className="col-xs-12"
  >
    <div
      className="container"
    >
      <div
        className="inputWrapper"
      >
        <input
          className="searchInput"
          name="searchInput"
          onChange={[Function]}
          placeholder="Search your gitmoji..."
          type="search"
          value=""
        />
      </div>
      <div
        className="actionsContainer"
      >
        <div
          className="container"
        >
          <button
            className="button"
            disabled={true}
          />
        </div>
        <div
          className="container"
        >
          <button
            className="button buttonActive"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              className="icon icon-grid"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#icon-grid"
              />
            </svg>
          </button>
          <button
            className="button "
            disabled={false}
            onClick={[Function]}
          >
            <svg
              className="icon icon-list"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#icon-list"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff7281",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🎨"
          type="button"
        >
          🎨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":art:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :art:
            </code>
          </button>
        </div>
        <p>
          Improve structure / format of the code.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#40c4ff",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="⚡️"
          type="button"
        >
          ⚡️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":zap:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :zap:
            </code>
          </button>
        </div>
        <p>
          Improve performance.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ff9d44",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🔥"
          type="button"
        >
          🔥
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":fire:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :fire:
            </code>
          </button>
        </div>
        <p>
          Remove code or files.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#8cd842",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🐛"
          type="button"
        >
          🐛
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":bug:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :bug:
            </code>
          </button>
        </div>
        <p>
          Fix a bug.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#fb584a",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="🚑️"
          type="button"
        >
          🚑️
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":ambulance:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :ambulance:
            </code>
          </button>
        </div>
        <p>
          Critical hotfix.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
  <article
    className="emoji col-xs-12 col-sm-6 col-md-3"
    style={
      {
        "--emojiColor": "#ffe55f",
      }
    }
  >
    <div
      className="card "
    >
      <header
        className="cardHeader"
      >
        <button
          className="gitmoji-clipboard-emoji gitmoji"
          data-clipboard-text="✨"
          type="button"
        >
          ✨
        </button>
      </header>
      <div
        className="gitmojiInfo"
      >
        <div
          className="gitmojiInfoName"
        >
          <button
            className="gitmoji-clipboard-code gitmojiCode"
            data-clipboard-text=":sparkles:"
            tabIndex={-1}
            type="button"
          >
            <code>
              :sparkles:
            </code>
          </button>
        </div>
        <p>
          Introduce new features.
        </p>
        <div
          className="gitmojiActions"
          onClick={[Function]}
        >
          <svg
            className="icon icon-star"
            height="20px"
            width="20px"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </div>
      </div>
    </div>
  </article>
</div>
`;
